p tag added to html page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
     <h2>Lorem, ipsum dolor.</h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, officia!</p>
 </body>
 
 </html>
