a button added to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>Lorem, ipsum dolor.</h2>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, officia!</p>
+    <button>set</button>
 </body>
 
 </html>
